--- a/5-break-line.html
+++ b/5-break-line.html
@@ -4,5 +4,7 @@
     <br />
     ini adalah paragraph <br />
     ini adalah baris selanjutnya
+    <hr />
+    ini adalah baris selanjutnya dengan void element hr
   </body>
 </html>
